# Apriorit

./: .gitignore  CMakeLists.txt  README.md
Apriorit1/: CMakeLists.txt
Apriorit1/include/apriorit1/controllers/: process_controller.h
Apriorit1/include/apriorit1/core/: exceptions.h  interfaces.h  models.h
Apriorit1/include/apriorit1/exporters/: csv_exporter.h  json_exporter.h
Apriorit1/include/apriorit1/exporters/factories/: csv_exporter_factory.h  json_exporter_factory.h
Apriorit1/include/apriorit1/providers/: windows_process_provider.h
Apriorit1/src/: main.cpp
Apriorit1/src/controllers/: process_controller.cpp
Apriorit1/src/exporters/: csv_exporter.cpp  json_exporter.cpp
Apriorit1/src/exporters/factories/: csv_exporter_factory.cpp  json_exporter_factory.cpp
Apriorit1/src/providers/: windows_process_provider.cpp
Apriorit2/: CMakeLists.txt  after.hpp  before.hpp
Apriorit3/: CMakeLists.txt
Apriorit3/include/apriorit3/core/: lru_cache.h
Apriorit3/src/: main.cpp
Apriorit4/: CMakeLists.txt  README.md
Apriorit4/client/src/: main.cpp
Apriorit4/server/src/: main.cpp
Apriorit4/shared/include/network/: unix_socket_exception.h  unix_socket_service.h
Apriorit4/shared/src/network/: unix_socket_service.cpp
Apriorit5/: CMakeLists.txt  README.md
Apriorit5/client/: CMakeLists.txt
Apriorit5/client/include/network/: file_transfer_client.hpp
Apriorit5/client/src/: main.cpp
Apriorit5/client/src/network/: file_transfer_client.cpp
Apriorit5/server/: CMakeLists.txt
Apriorit5/server/include/network/: file_transfer_server.hpp
Apriorit5/server/src/: main.cpp
Apriorit5/server/src/network/: file_transfer_server.cpp
Apriorit5/shared/: CMakeLists.txt
Apriorit5/shared/include/exceptions/: network_exceptions.hpp
Apriorit5/shared/protos/: file_transfer.proto
Apriorit6/: CMakeLists.txt  README.md
Apriorit6/src/: main.cpp
Apriorit6/task1/include/guards/: file_handle_guard.hpp
Apriorit6/task1/src/guards/: file_handle_guard.cpp
Apriorit6/task2/include/deleters/: socket_deleters.hpp
Apriorit6/task3/src/: snippet1.cpp  snippet2.cpp  snippet3.cpp
Apriorit6/task4/include/: shared_ptr.hpp
Apriorit7/: CMakeLists.txt  README.md
Apriorit7/include/apriorit7/core/: linked_list.hpp
Apriorit7/src/: main.cpp
